<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/activity_margin" >

    <Button
        android:id="@+id/btn_vs_android"
        style="@style/Button"
        android:minWidth="@dimen/btn_min_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_vs_android" />

    <Button
        android:id="@+id/btn_bluetooth"
        style="@style/Button"
        android:minWidth="@dimen/btn_min_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_bluetooth" />

    <Button
        android:id="@+id/btn_wifi"
        style="@style/Button"
        android:minWidth="@dimen/btn_min_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_wifi" />

</LinearLayout>
