<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:adjustViewBounds="true"
    android:padding="@dimen/activity_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:hint="@string/txt_username"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:hint="@string/txt_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:hint="@string/txt_confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/btn_ok"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>