<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingBottom="@dimen/activity_margin" >

    <TextView
        android:id="@+id/title_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_start"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:shadowColor="#000"
        android:textColor="#FFF"
		android:gravity="center"
        android:text="@string/txt_paired_devices"
        android:visibility="visible" />

    <ListView
        android:id="@+id/paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stackFromBottom="true" />

    <TextView
        android:id="@+id/title_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_start"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:shadowColor="#000"
        android:textColor="#FFF"
		android:gravity="center"
        android:text="@string/txt_new_devices"
        android:visibility="gone" />

    <ListView
        android:id="@+id/new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:stackFromBottom="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_normall"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_scan"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan" />

</LinearLayout>